testsuite/tests/properties/invalid_struct_update/invalid_type/test.lkt
from common import FooNode, KV

class Example: FooNode implements TokenNode {
    @exported fun increment(kv: KV): KV = kv.update(key=s"hello")
}
